--- a/argo/apps-children/dev/helm-guestbook-app-dev.yml
+++ b/argo/apps-children/dev/helm-guestbook-app-dev.yml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: helm-guestbook-app-dev
-  namespace: argocd
+  namespace: default 
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: helm-guestbook-dev
     name: in-cluster
-  project: appbundle-project-dev
+  project: argo-project-dev
   source:
     path: kustomized_helm/overlays/dev
     repoURL: https://github.com/d0-labs/argocd-app-of-apps-child-guestbook
