--- a/argo/apps-children/dev/workflows.yaml
+++ b/argo/apps-children/dev/workflows.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: argo-workflows
 spec:
-  project: default
+  project: argo-project-dev 
   source:
     repoURL: 'https://github.com/argoproj/argo-helm.git'
     targetRevision: 0.2.5
