--- a/argo/root-app-dev.yml
+++ b/argo/root-app-dev.yml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: argo
     name: in-cluster
   project: argo-project-dev
   source:
