--- a/argo/projects/project-dev.yml
+++ b/argo/projects/project-dev.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: appbundle-project-dev
+  name: argo-project-dev
   namespace: argo
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
