--- a/argo/root-app-dev.yml
+++ b/argo/root-app-dev.yml
@@ -14,3 +14,11 @@ spec:
     path: argo/apps/dev
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values.yaml
+    chart: dev 
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
