--- a/argo/apps/dev/helm-guestbook-app-dev.yml
+++ b/argo/apps/dev/helm-guestbook-app-dev.yml
@@ -2,12 +2,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: helm-guestbook-app-dev
-  namespace: default 
+  namespace: argo 
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default 
+    namespace: argo 
     name: in-cluster
   project: argo-project-dev
   source:
