--- a/argo/apps/dev/argocd.yaml
+++ b/argo/apps/dev/argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-workflows
+  name: argo-cd
 spec:
   project: argo-project-dev 
   source:
