--- a/argo/apps/dev/argocd.yaml
+++ b/argo/apps/dev/argocd.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: argo-cd
 spec:
-  project: argo-project-dev 
+  project: argo
   source:
     repoURL: 'https://github.com/argoproj/argo-helm.git'
     targetRevision: 2.0.3
