--- a/apps/templates/argo-cd.yaml
+++ b/apps/templates/argo-cd.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argo 
-  project: argo 
+  project: dev 
   source:
     path: charts/argo-cd
     repoURL: https://github.com/joaorufino/argocd.git
