--- a/apps/templates/dev.yaml
+++ b/apps/templates/dev.yaml
@@ -8,7 +8,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argo 
-  project: argo 
+  project: dev 
   source:
     path: apps/
     repoURL: https://github.com/joaorufino/argocd.git
