changed application name

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -36,7 +36,7 @@ server:
     orphanedResources:
       warn: false
   additionalApplications: 
-    - name: argo
+    - name: dev
       namespace: argo
       destination:
         namespace: argo
