--- a/apps/templates/argo-cd.yaml
+++ b/apps/templates/argo-cd.yaml
@@ -14,6 +14,9 @@ spec:
     path: charts/argo-cd
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - {{ default "values.yaml" .Values.serverName }}
   syncPolicy:
     automated:
       prune: true
