--- a/apps/cicd/charts/argo-cd/values.yaml
+++ b/apps/cicd/charts/argo-cd/values.yaml
@@ -14,45 +14,45 @@ server:
     - --insecure
   installCRDs: false
   configEnabled: true
-    #  config:
-    #    repositories: |
-    #      - name: argo-helm
-    #        type: helm
-    #        url: https://argoproj.github.io/argo-helm
-    #  additionalProjects: 
-    #  - name: argo
-    #    namespace: argo
-    #    additionalLabels: {}
-    #    additionalAnnotations: {}
-    #    description: Argos Related Applications
-    #    sourceRepos:
-    #    - '*'
-    #    destinations:
-    #    - namespace: argo
-    #      server: https://kubernetes.default.svc
-    #    clusterResourceWhitelist:
-    #    - group: '*'
-    #      kind: '*'
-    #    orphanedResources:
-    #      warn: false
-    #  additionalApplications: 
-    #    - name: dev
-    #      namespace: argo
-    #      destination:
-    #        namespace: argo
-    #        server: https://kubernetes.default.svc
-    #      project: argo
-    #      source:
-    #        path: apps
-    #        repoURL: https://github.com/JoaoRufino/argocd.git
-    #        targetRevision: HEAD
-    #        directory:
-    #          recurse: true
-    #          jsonnet: {}
-    #      syncPolicy:
-    #        syncOptions:
-    #        - CreateNamespace=true
-    #        automated:
-    #          selfHeal: true
-    #          prune: true
-    #
+  config:
+    repositories: |
+      - name: argo-helm
+        type: helm
+        url: https://argoproj.github.io/argo-helm
+  additionalProjects: 
+  - name: argo
+    namespace: argo
+    additionalLabels: {}
+    additionalAnnotations: {}
+    description: Argos Related Applications
+    sourceRepos:
+    - '*'
+    destinations:
+    - namespace: argo
+      server: https://kubernetes.default.svc
+    clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+    orphanedResources:
+      warn: false
+  additionalApplications: 
+    - name: dev 
+      namespace: argo
+      destination:
+        namespace: argo
+        server: https://kubernetes.default.svc
+      project: argo
+      source:
+        path: env
+        repoURL: https://github.com/JoaoRufino/argocd.git
+        targetRevision: HEAD
+        helm:
+          valueFiles:
+          - values.yaml
+      syncPolicy:
+        syncOptions:
+        - CreateNamespace=true
+        automated:
+          selfHeal: true
+          prune: true
+
