--- a/apps/cicd/templates/argo-cd.yaml
+++ b/apps/cicd/templates/argo-cd.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path: charts/argo-cd
+    path: apps/cicd/charts/argo-cd
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
   syncPolicy:
