moved charts to root folder

--- a/env/templates/cicd.yaml
+++ b/env/templates/cicd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev 
+  name: cicd 
   namespace: argo 
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,6 +11,6 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path: env 
+    path: apps/cicd 
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
