--- a/apps/cicd/templates/argo-workflows.yaml
+++ b/apps/cicd/templates/argo-workflows.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path:  charts/argo-cd
+    path:  charts/argo-workflows
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
   syncPolicy:
