--- a/apps/templates/dev.yaml
+++ b/apps/templates/dev.yaml
@@ -11,6 +11,6 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path: env 
+    path: apps 
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
