--- a/apps/templates/cicd.yaml
+++ b/apps/templates/cicd.yaml
@@ -11,6 +11,7 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path: / 
     repoURL: https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
+    helm: 
+      chart: cicd 
