--- a/apps/templates/cicd.yaml
+++ b/apps/templates/cicd.yaml
@@ -12,5 +12,5 @@ spec:
   project: argo 
   source:
     path : cicd
-    repoURL: https://github.com/joaorufino/argocd.git
+    repoURL: https://github.com/joaorufino/cicd.git
     targetRevision: HEAD
