--- a/apps/templates/cicd.yaml
+++ b/apps/templates/cicd.yaml
@@ -11,6 +11,6 @@ spec:
     namespace: argo 
   project: argo 
   source:
-    path : cicd
+    path : charts/cicd
     repoURL: https://github.com/joaorufino/cicd.git
     targetRevision: HEAD
