changed name dev to root

--- a/apps/templates/dev.yaml
+++ b/apps/templates/dev.yaml
@@ -1,16 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev 
-  namespace: argo 
+  name: root
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argo 
-  project: argo 
+  project: argo
   source:
-    path: apps 
-    repoURL: https://github.com/joaorufino/argocd.git
+    path: apps/
+    repoURL:  https://github.com/joaorufino/argocd.git
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
