--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -8,7 +8,8 @@ argo-cd:
   global:
     image:
       repository: niplodim/argocd
-      tag: latest
+      tag: v2 
+
   dex:
     enabled: false
   server:
